platform/argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: argocd.kubernetes.soulsseeker.com
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.kubernetes.soulsseeker.com
      secretName: argocd-tls
  rules:
    - host: argocd.kubernetes.soulsseeker.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
